fixed element alignment in Post.jsx

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -382,7 +382,7 @@ h2 {
 
 .post-wrapper {
   @extend .post-edit-form;
-  
+
   .post {
     background-color: var(--clr-bg-alpha-1);
     padding: 1rem;
@@ -416,12 +416,16 @@ h2 {
   .likesNcomments {
     grid-column: span 3;
     display: flex;
+    align-items: flex-end;
     gap: 1rem;
     justify-self: right;
-    align-items: flex-end;
     margin-right: 1rem;
     margin-top: 0.5rem;
     font-size: 0.8rem;
+
+    p {
+      margin: unset;
+    }
   }
 
   .like-btn {
